--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "grommet": "^2.7.0",
+    "polished": "^3.3.0",
     "react": "^16.8.6",
+    "react-color": "^2.17.3",
+    "react-color-picker-text": "^1.0.8",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-input-color": "^2.0.13",
+    "react-scripts": "3.0.1",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
